Add note about restarting RStudio

--- a/README.Rmd
+++ b/README.Rmd
@@ -48,4 +48,4 @@ options(wlsDataBrowser.data_path = "/path/to/wls/data.dta")
 
 ## RStudio add-in
 
-Once installed, you should be able to find the `wlsDataBrowser` in the RStudio add-in dropdown menu.
+Once installed, you should be able to find the `wlsDataBrowser` in the RStudio add-in dropdown menu. You might have to restart RStudio for the add-in to show up.
