--- a/README.Rmd
+++ b/README.Rmd
@@ -28,8 +28,7 @@ For more details about the data, see the [WLS data portal](https://wls.portal.ss
 You can install the development version of wlsDataBrowser like so:
 
 ``` r
-pak::pak("rmtrane/wlsDataBrowser")
-# alternatively: remotes::install_github("rmtrane/wlsDataBrowser")
+remotes::install_github("rmtrane/wlsDataBrowser")
 ```
 
 ## Run App
