--- a/README.qmd
+++ b/README.qmd
@@ -1,18 +1,9 @@
 ---
-output: github_document
+format: gfm
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
-
-```{r, include = FALSE}
-knitr::opts_chunk$set(
-  collapse = TRUE,
-  comment = "#>",
-  fig.path = "man/figures/README-",
-  out.width = "100%"
-)
-```
 
 # wlsDataBrowser
 
@@ -39,11 +30,13 @@ You can run the Shiny application interactively using the following:
 wlsDataBrowser::wlsDataBrowser()
 ```
 
-You can optionally set the file path so you don't have to choose a file every times. Add the following to your .Rprofile file with the path to your local copy of the data:
+You can optionally set the file path so you don't manually have to choose the file when running the application. Add the following to your .Rprofile file with the path to your local copy of the data:
 
 ``` r
 options(wlsDataBrowser.data_path = "/path/to/wls/data.dta")
 ```
+
+You will need to restart your R session for the changes to take effect.
 
 ## RStudio add-in
 
