Setup github actions to perform R CMD CHECK

--- a/README.qmd
+++ b/README.qmd
@@ -8,6 +8,7 @@ format: gfm
 # wlsDataBrowser
 
 <!-- badges: start -->
+[![R-CMD-check](https://github.com/rmtrane/wlsDataBrowser/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/rmtrane/wlsDataBrowser/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
 This R-package contains a Shiny application to explore the WLS data. You will need to obtain a copy of the data for yourself. For more, see https://wls.wisc.edu. 
