--- a/README.qmd
+++ b/README.qmd
@@ -42,3 +42,19 @@ You will need to restart your R session for the changes to take effect.
 ## RStudio add-in
 
 Once installed, you should be able to find the `wlsDataBrowser` in the RStudio add-in dropdown menu. You might have to restart RStudio for the add-in to show up.
+
+## Positron keyboard shortcut
+
+If using [Positron](https://positron.posit.co), the following snippet can be added to `keybindings.json` to easily launch the data browser (here, keyboard combo `cmd+alt+shift+w` launches the data browser):
+
+``` json
+{
+    "key": "cmd+alt+shift+w",
+    "command": "workbench.action.executeCode.silently",
+    "description": "Browse WLS Data",
+    "args": {
+        "langId": "r",
+        "code": "wlsDataBrowser:::wlsDataBrowser()"
+    }
+}
+```
