--- a/README.qmd
+++ b/README.qmd
@@ -50,7 +50,7 @@ If using [Positron](https://positron.posit.co), the following snippet can be add
 ``` json
 {
     "key": "cmd+alt+shift+w",
-    "command": "workbench.action.executeCode.silently",
+    "command": "workbench.action.executeCode.console",
     "description": "Browse WLS Data",
     "args": {
         "langId": "r",
